src/styles/globals.css
@import "tailwindcss" source("../");
@import "tw-animate-css";
@plugin "@tailwindcss/forms";

@import "./colors.css";
@import "./typography.css";
@import "./animations.css";

@custom-variant dark (&:where(.dark, .dark *));

/* Breakpoints for different heights on mobile.
 * Sometimes, mobile varies much more by height than width, so being able
 * to set a larger text or spacing size for taller screens can lead to a
 * cleaner look.
 *
 * For example:
 *   iPhone SE: 375w x 667h
 *   iPhone 14 Pro Max: 430w x 932h
 *   Samsung Galaxy S8+: 360w x 740h
 *   Samsung Galaxy S20 Ultra: 412w x 915h
 */
/* sm-tall: height >= 750 px, width < 640 px */
@custom-variant sm-tall (@media (height >= 46.875rem) and (width < 40rem));

@utility def-ring {
  outline: 0.125rem dashed var(--color-bw) !important;
  outline-offset: 0.125rem !important;
  box-shadow: none !important;
}

:root {
  /*
    This is what changes the color scheme from light to dark when the ".dark"
    class gets added to the root HTML element of the page.

    See: https://stackoverflow.com/a/79739830
  */
  color-scheme: light;
  --tw-light: initial;
  --tw-dark: ;
  @variant dark {
    color-scheme: dark;
    --tw-light: ;
    --tw-dark: initial;
  }
}

@layer base {
  :root {
    /* Max width of main content on site.
      75rem -> 1200px -> 300
     */
    --content-max: 75rem;

    /* Max width for narrower elements on site.
      50rem -> 800 px -> 200
     */
    --content-narrow: 50rem;
  }

  html {
    /*
      Use animated scrolls when clicking in-page links, instead of sudden jumps.
    */
    scroll-behavior: smooth;
  }

  /*
    Keyboard focus indicator - a dashed outline box.
    Set this globally to enforce a consistent look for all focusable elements.
    Have to use !important to override existing focus styling in Starwind UI.
   */
  *:focus-visible {
    @apply def-ring;
    border-radius: var(--radius-lg);
  }

  /*
    Default to the "pointer finger on hand" cursor for buttons.

    Technically, the pointer cursor is only supposed to be used for links.

    Practically speaking though, users interpret this cursor as meaning
    "clickable", and are likely to not realize that buttons are clickable if
    you use the default cursor. Especially in modern design where buttons are
    flat.
   */
  button:not(:disabled),
  [role="button"]:not(:disabled) {
    cursor: pointer;
  }
}

/* Theme variables. */
@theme inline {

  /* Custom presets for radius sizes (determines roundedness of corners).
   */
  --radius: 0.625rem;
  --radius-xs: calc(var(--radius) - 0.375rem);
  --radius-sm: calc(var(--radius) - 0.25rem);
  --radius-md: calc(var(--radius) - 0.125rem);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 0.25rem);
  --radius-2xl: calc(var(--radius) + 0.5rem);
  --radius-3xl: calc(var(--radius) + 1rem);

  /* Additional custom breakpoints.
   * 
   * These can be used as modifiers just like the built-in breakpoints:
   *
   * Example:
   *   max-w-50 xs:max-w-60 md:max-w-100
   */
  --breakpoint-xs:      31.25rem; /* 500 px */
}

